@@ -98,6 +98,7 @@ module ActiveRecord
       def sqlserver_2005? ; ActiveRecord::Base.connection.sqlserver_2005? ; end
       def active_record_2_point_2? ; ActiveRecord::VERSION::MAJOR == 2 && ActiveRecord::VERSION::MINOR == 2 ; end
       def active_record_2_point_3? ; ActiveRecord::VERSION::MAJOR == 2 && ActiveRecord::VERSION::MINOR == 3 ; end
+      def ruby_19? ; RUBY_VERSION >= '1.9' ; end
     end
     def assert_sql(*patterns_to_match)
       $queries_executed = []
@@ -113,6 +114,7 @@ module ActiveRecord
     def sqlserver_2005? ; self.class.sqlserver_2005? ; end
     def active_record_2_point_2? ; self.class.active_record_2_point_2? ; end
     def active_record_2_point_3? ; self.class.active_record_2_point_3? ; end
+    def ruby_19? ; self.class.ruby_19? ; end
   end
 end
 
